<resources>
    <string name="app_name">ChallengeChap7</string>
    <string name="masukkan_username">masukkan username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_film">Nama Film</string>
    <string name="link_gambar">Link Gambar</string>
    <string name="sutradara_film">Sutradara Film</string>
    <string name="deskripsi_film">Deskripsi Film</string>
    <string name="tambah_film">Tambah Film</string>
    <string name="perbarui_film">Perbarui Film</string>
    <string name="profil">Profil</string>
    <string name="ubah">Ubah</string>
    <string name="keluar">Keluar</string>
    <string name="indonesia">Indonesia</string>
    <string name="inggris">Inggris</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="isi_masukan">Semua input wajib diisi</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="login_gagal">Login gagal</string>
    <string name="favorit">Favorit</string>
    <string name="ubah_data_berhasil">Ubah Data Berhasil</string>
    <string name="ubah_data_gagal">Ubah Data Gagal</string>
</resources>